tests/compiler_errors/name_redefinitions/type_redef_const.tlp
const foo 1 end
struct foo int end